recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:9: error: Missing closing brace `}' assumed here
} 
^